--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -56,7 +56,7 @@
         </div>
     </nav>
     <div class="container main">
-        <h1 class="main">Welcome! <%= useridentity[0].fullName%> </h1>
+        <h1 class="main"><%= useridentity.fullName%> </h1>
     </div>
 
     <div class="search container main mb-3">
@@ -67,7 +67,7 @@
         <form class="d-flex" action="/home/courses" method="GET">
             <input class="form-control me-2" type="search" placeholder="Search by name" aria-label="Search" name="searchName">
             <input class="form-control me-2" type="search" placeholder="Search by desc" aria-label="Search" name="searchDesc">
-            <button class="btn btn-success" type="submit">Search</button>
+            <button class="btn btn-secondary" type="submit">Search</button>
           </form>
     </div>
 
@@ -85,7 +85,7 @@
 
                                     <h6 class="mt-3">Price: <%= convertToRupiah(el.price) %></h6>
                                     <% if(role == 1){ %>
-                                        <a href= "/home/courses/edit/<%= el.id %>" class="btn btn-secondary">Edit</a>
+                                        <a href= "/home/courses/edit/<%= el.id %>" class="btn btn-warning">Edit</a>
                                         <a href= "/home/courses/delete/<%= el.id %>" class="btn btn-danger">Delete</a>
                                         <% } else if(role == 2){ %>
                                             <% if(purchased.filter(element => element.id == el.id)[0]) {%>
