--- a/views/addPage.ejs
+++ b/views/addPage.ejs
@@ -17,7 +17,7 @@
 <body>
     <div class="container all m-4">
         <div class="form m-5">
-            <div class="register"><p>Add Course</p></div>
+            <div class="register"><p>Add Kursus</p></div>
             <% if (errors) { %>
               <pre><%= errors %></pre>
             <%}%>
