--- a/views/editPage.ejs
+++ b/views/editPage.ejs
@@ -20,7 +20,7 @@
           <% if (errors) { %>
             <pre><%= errors %></pre>
           <%}%>
-            <div class="register"><p>Edit Course</p></div>
+            <div class="register"><p>Edit Kursus</p></div>
             <div class="row">
                 <div class="col">
                   <form action="/home/courses/edit/<%= data[0].id %>" method="POST">
