--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,6 +6,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Home</title>
+    <link rel="shortcut icon" href="infokuliah.ico" />
     <!-- Bootstrap Icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Google fonts-->
@@ -11741,11 +11742,11 @@
       }
     </style>
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top py-3 bg-light mb-3" id="mainNav">
       <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="/home">Infokuliah.id</a>
+        <a class="navbar-brand" href="/home"><img src="../infokuliah.png" alt="Infokuliah.id" /></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"> </span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ms-auto my-2 my-lg-0">
@@ -11756,9 +11757,9 @@
             <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
 
             <%}%>
-            <li class="nav-item"><a class="nav-link" href="/home/courses">Paket Kursus</a></li>
+            <li class="nav-item"><a class="nav-link active" href="/home/courses">Paket Kursus</a></li>
             <% if(id){ %>
-            <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
+            <li class="nav-item"><a class="nav-link active" href="/logout">Log Out</a></li>
             <% } %>
           </ul>
         </div>
