--- a/views/kursus.ejs
+++ b/views/kursus.ejs
@@ -40,17 +40,17 @@
     </style>
     <nav class="navbar navbar-expand-lg navbar-light sticky-top py-3 bg-light mb-3" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="/home">Infokuliah.id</a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <a class="navbar-brand" href="/home"><img src="../infokuliah.png" alt="Infokuliah.id" /></a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon">
+            </span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto my-2 my-lg-0">
 
-                    <li class="nav-item"><a class="nav-link active" href="/home/courses">List Kursus</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/home/courses">My Kursus</a></li>
                     <% if(role == 1) { %>
-                        <li><a href= "/home/courses/add" class="btn btn-primary">Add</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="/home/courses">Arsip</a></li>
                     <%}%>
-
+                    <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
                 </ul>
             </div>
         </div>
@@ -58,18 +58,19 @@
     <div class="container main">
         <h1 class="main"><%= useridentity.fullName%> </h1>
     </div>
-
     <div class="search container main mb-3">
-
-
     <div class="search container mt-2 mb-5 mx-5">
 
         <form class="d-flex" action="/home/courses" method="GET">
-            <input class="form-control me-2" type="search" placeholder="Search by name" aria-label="Search" name="searchName">
-            <input class="form-control me-2" type="search" placeholder="Search by desc" aria-label="Search" name="searchDesc">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="searchName">
+            <!-- <input class="form-control me-2" type="search" placeholder="Search by desc" aria-label="Search" name="searchDesc"> -->
             <button class="btn btn-secondary" type="submit">Search</button>
           </form>
     </div>
+    <div class="d-flex justify-content-end mb-3">
+        <% if(role == 1) { %>
+        <a href= "/home/courses/add" class="btn btn-primary">Add Course</a>
+    <%}%></div>
 
     <main>
         <div class="cards">
@@ -89,7 +90,7 @@
                                         <a href= "/home/courses/delete/<%= el.id %>" class="btn btn-danger">Delete</a>
                                         <% } else if(role == 2){ %>
                                             <% if(purchased.filter(element => element.id == el.id)[0]) {%>
-                                                <h6>purchased</h6>
+                                                <h6>Success Buy</h6>
                                                 <%} else {%>
                                                     <a href= "/home/courses/buy/<%= el.id %>" class="btn btn-primary"> Buy </a>
                                             <%}%>
@@ -103,8 +104,8 @@
             </div>
         </div>
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <footer class="bg-light py-5 sticky-bottom">
     <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2022 - Infokuliah.id</div></div>
   </footer>
