--- a/views/testimoni.ejs
+++ b/views/testimoni.ejs
@@ -12423,101 +12423,23 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ms-auto my-2 my-lg-0">
-          <% if(!id){ %>
-            <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
-            <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
-            <%} else { %>
-              <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
-
-              <%}%>
-                <li class="nav-item"><a class="nav-link active" href="/home/courses">Paket Kursus</a></li>
-                <li class="nav-item"><a class="nav-link active" href="/home/testimoni">Alumni</a></li>
-                <% if(id){ %>
-                  <li class="nav-item"><a class="nav-link active" href="/logout">Log Out</a></li>
-                  <% } %>
+          <li class="nav-item"><a class="nav-link active" href="/home/courses">Paket Kursus</a></li>
+          <li class="nav-item"><a class="nav-link active" href="/home/testimoni">Alumni</a></li>
+          <li class="nav-item"><a class="nav-link active" href="/logout">Log Out</a></li>
         </ul>
       </div>
     </div>
   </nav>
   <!-- Masthead-->
+  <div class="container mt-5 mb-5">
+    <video width="1400" height="240" autoplay>
+      <source src="../infokuliah.mp4" type="video/mp4" />
+    </video>
+    <a><img src="../alumni1.png" alt="Infokuliah.id" /></a>
+    <a><img src="../alumni2.png" alt="Infokuliah.id" /></a>
 
-  <header class="page-section bg-primary">
-    <div class="container px-4 px-lg-5 h-100">
-      <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
-        <div class="col-lg-8 align-self-end">
-          <h3 class="text-white font-weight-bold">Bimbingan Belajar Online Persiapan UTBK Terbaik di Indonesia!</h3>
-          <hr class="divider" />
-        </div>
-        <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 mb-5">
-            Infokuliah.id telah meluluskan lebih dari 101.924 siswa ke PTN sejak tahun 1990. Soal diktat dan tryout
-            terjamin kualitasnya dan selalu disesuaikan dengan soal UTBK terbaru. Dengan metode pembelajaran ditekankan
-            pada konsep
-            dan skill bernalar.
-          </p>
-          <p class="text-white-75 mb-5">Infokuliah.id membantu siswa mencari dan membandingkan informasi perguruan
-            tinggi di seluruh Indonesia supaya bisa meraih impian lewat kampus idaman dan jurusan yang sesuai dengan
-            passion.</p>
-          <% if(!id){ %>
-            <a class="btn btn-primary btn-xl" href="#about">Register</a>
-            <%}%>
-        </div>
-      </div>
-    </div>
-  </header>
-  <div class="container px-4 px-lg-5" style="text-align: center ;">
-    <a><img src="../masukptn.png" width="100%" alt="Infokuliah.id" /></a>
-    <a><img src="../masukptn2.png" width="100%" alt="Infokuliah.id" /></a>
-    <a><img src="../masukptn3.png" width="100%" alt="Infokuliah.id" /></a>
-    <br></br>
-    <a><img src="../masukptn4.png" width="100%" alt="Infokuliah.id" /></a>
   </div>
 
-  <!-- <a><img src="../infokuliah5.png" alt="Infokuliah.id" /></a> -->
-  <!-- <a><img src="../infokuliah6.png" alt="Infokuliah.id" /></a> -->
-  <br></br>
-  <div class="d-flex justify-content-center mb-3">
-    <H3>Program Kami</H3>
-  </div>
-
-  <div class="container px-4 px-lg-5" style="text-align: center ;">
-    <div class="card-group">
-      <div class="card">
-        <img class="card-img-top" alt="art" style="width: 100%; height: 60%;" src="../foto6.png" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Program Garansi Kedinasan/STAN</h5>
-          <p class="card-text">Program Garansi STAN/Kedinasan dengan sistem pembelajaran privat maupun group class.
-            Siswa belajar dengan kondisi professional, fokus terhadap tujuan dan pengajar pendamping yang kompeten untuk
-            persiapan ujian masuk STAN.</p>
-        </div>
-      </div>
-      <div class="card">
-        <img class="card-img-top" alt="art" style="width: 100%; height: 60%;" src="../foto4.png" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Program UTBK Soshum</h5>
-          <p class="card-text">Program Garansi STAN/Kedinasan dengan sistem pembelajaran privat maupun group class.
-            Siswa belajar dengan kondisi professional, fokus terhadap tujuan dan pengajar pendamping yang kompeten untuk
-            persiapan ujian masuk STAN.</p>
-        </div>
-      </div>
-      <div class="card">
-        <img class="card-img-top" alt="art" style="width: 100%; height: 60%;" src="../foto1.png" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Program Masuk PTN</h5>
-          <p class="card-text">Program Garansi STAN/Kedinasan dengan sistem pembelajaran privat maupun group class.
-            Siswa belajar dengan kondisi professional, fokus terhadap tujuan dan pengajar pendamping yang kompeten untuk
-            persiapan ujian masuk STAN.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-  <!-- <a class="btn btn-primary" href="/home/courses"> cek</a> -->
-  <br>
-  <div class="d-flex justify-content-center mb-5 mt-5">
-    <a href="/home/courses" class="btn btn-warning btn-lg">LIHAT PROGRAM LAINNYA ></a>
-  </div>
 
   <!-- Footer-->
   <footer class="bg-light py-5 sticky-bottom">
