--- a/views/detailkursus.ejs
+++ b/views/detailkursus.ejs
@@ -52,20 +52,13 @@
                 </span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto my-2 my-lg-0">
-                    <% if(role==1){ %>
-                        <li class="nav-item"><a class="nav-link active" href="/home/mycourses">Arsip</a></li>
-                        <% } else if(role==2){ %>
-                            <li class="nav-item"><a class="nav-link active" href="/home/detailkursus">My Kursus</a></li>
-                            <%}%>
-                                <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
 
-                                <!-- <li class="nav-item"><a class="nav-link active" href="/home/detailkursus">My Kursus</a></li>
-                    <% if(role == 1) { %>
-                         <li class="nav-item"><a class="nav-link active" href="/home/mycourses">Arsip</a></li>
-                    <%}%>
-                    <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li> -->
+                    <li class="nav-item"><a class="nav-link active" href="/home/courses">Back Kursus</a></li>
+                    <% if(role==1) { %>
+                        <!-- <li class="nav-item"><a class="nav-link active" href="/home/courses">Arsip</a></li> -->
+                        <%}%>
+                            <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
                 </ul>
-
             </div>
         </div>
     </nav>
@@ -83,11 +76,6 @@
                 <!-- <input class="form-control me-2" type="search" placeholder="Search by desc" aria-label="Search" name="searchDesc"> -->
                 <button class="btn btn-secondary" type="submit">Search</button>
             </form>
-        </div>
-        <div class="d-flex justify-content-end mb-3">
-            <% if(role==1) { %>
-                <a href="/home/courses/add" class="btn btn-primary">Add Course</a>
-                <%}%>
         </div>
 
         <main>
@@ -107,23 +95,20 @@
                                     </p>
                                     <div class="buttons mb-1 mt-1">
 
-                                        <h6 class="mt-3">Price: <%= convertToRupiah(el.price) %>
-                                        </h6>
                                         <% if(role==1){ %>
-                                            <a href="/home/courses/edit/<%= el.id %>" class="btn btn-warning">Edit</a>
-                                            <a href="/home/courses/delete/<%= el.id %>"
-                                                class="btn btn-primary">Arsipkan</a>
+                                            <a href="/home/courses/edit/<%= el.id %>" class="btn btn-warning">Update</a>
                                             <a href="/home/courses/delete/<%= el.id %>"
                                                 class="btn btn-danger">Delete</a>
-
                                             <% } else if(role==2){ %>
                                                 <% if(purchased.filter(element=> element.id == el.id)[0]) {%>
-                                                    <h6>Sukses Dibeli</h6>
+                                                    <h6>Selesai dilaksanakan</h6>
                                                     <%} else {%>
-                                                        <a href="/home/courses/buy/<%= el.id %>"
-                                                            class="btn btn-primary"> Beli Kursus </a>
+                                                        <a href="/home/detailkursus/Success/<%= el.id %>"
+                                                            class="btn btn-primary"> Akan dilaksanakan </a>
+                                                        <h6>Senin, 30 Juni 2022</h6>
                                                         <%}%>
                                                             <% }%>
+
                                     </div>
                                 </div>
                             </div>
